movies.css
html { -webkit-font-smoothing: antialiased;}

body {
	background-color: #ead7aa;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	color: #FFFFFF;
}

#page {
	width: 1024px;
	margin-left: auto;
	margin-right: auto;
	background-color: #FFFFFF;
	border-radius: 5px 5px 0 0;
}

#content {
	padding-bottom: 30px;
}

header {
	height: 80px;
	text-align: center;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	background-color: #E60000;
	margin-top: -20px;
	margin-bottom: -25px;
	border-radius: 5px 5px 0 0;
}

nav {
	margin-bottom: 0px;
	margin-top: -10px;
	height: 35px;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	font-size: 18pt;
	background-color: #FFCC00;
}

nav li {
	display: inline-block;
	float: left;
	height: 30px;
	width: 33%;
	padding-top: 5px;
}
nav li a {
	display: block;
	float: center;
	width: 100%;
	text-decoration: none;
	text-align: center;
}

nav li a:visited {
	color: ;
}
nav li:hover {
	background: #CCA300;
}


h2 {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	font-size: 16pt;
	text-align: center;
	margin-bottom: 0px;
}

h4 {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
}

.containerHeader {
	border-radius: 5px 5px 0 0;
	background-color: #E60000;
}

.sideContent {
	background-color: #DADADA;
	border-radius: 5px 5px 5px 5px;
	vertical-align: top;
	min-height: 40px;
	text-align: center;
}

.mainContent {
	background-color: #DADADA;
	border-radius: 5px 5px 5px 5px;
	vertical-align: top;
	min-height: 80px;
	text-align: center;
}

#inputsection {
	text-align: center;
	background-color: #E60000;
	border-radius: 0px 0px 5px 5px;
	padding-top: 2px;
	padding-bottom: 6px;
}

#sideinfo {
	display: inline-block;
	width: 200px;
	margin-left: 9px;
	margin-right: 3px;
}

#maininfo {
	display: inline-block;
	width: 800px;
}



#criticRating {
	display: inline-block;
	width: 95px;
	margin-top: -20px;

}

#audienceRating {
	display: inline-block;
	width: 95px;
}

#synopsis {
	text-align: left;
}

input[type=text] {
	border-radius: 4px 4px 4px 4px;
}

footer {
	text-align: center;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	background-color: #E60000;
}

